Closed
Bug 130605
Opened 24 years ago
Closed 24 years ago
Java applet doesn't load on www.rav.uplink.pl
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: gabrielbaines, Assigned: adu)
References
()
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
5.23 KB,
patch
|
peterlubczynski-bugs
:
review+
beard
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:0.9.9) Gecko/20020311
BuildID: 2002031104
In the leftmost frame on this page: http://www.rav.uplink.pl/ there is a Java
applet (menu).
It works perfectly with: Mozilla 0.9.8 (Build ID: 2002020406) + JDK 1.4
It doesn't work with: Mozilla 0.9.9 (Build ID: 2002031104) + JDK 1.4
Both builds tested on the same box, with same JDK.
On both builds other pages with Java seem to work OK, it is a problem with this
particular page. However, because it seems like regression (works on 0.9.8) I
file it as a browser bug.
If this is a problem with the page applet tag, please change product -> Tech
Evangelism
Reproducible: Always
Steps to Reproduce:
1.Go to http://www.rav.uplink.pl/
.
Actual Results: Java does not start resulting in no menu in the left frame.
Expected Results: Java starts, applet gets loaded and initialized, menu apperas
in the left frame.
Comment 1•24 years ago
|
||
Applet in left frame does not start for me too
(Linux with jre1.3)
Confirming.
Looks like problem with parsing (left frame has incorrect html)
NS 4.x shows it but i am not sure 0.9.8 did this
(html probably was changed). Anyway, problem is worth looking to it.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows NT → All
| Reporter | ||
Comment 2•24 years ago
|
||
I'm absolutely sure it works with 0.9.8 - I've just doublechecked it on builds
2002020406 and 2002020409 on two different boxes (both WinNT).
| Assignee | ||
Comment 4•24 years ago
|
||
This regression is a side effect of darin's fix for bug 124042.
Before we didn't use NS_NewURI, which it turn calls nsIIOService::NewURI,
which at some point call nsStandardURL::Init().
And in Init() there are lines:
if (spec.IsEmpty()) {
Clear();
return NS_OK;
}
In our case, spec is value of codebase attribute and when it's empty
(codebase=""), we get empty url in nsObjectFrame.cpp line 1066 and
then call InstantiatePlugin with null fullURL, which, finally, causes
'No Plugin Downloaded Plugin' to popup.
I don't think that nsStandardUTL::Init() is wrong, so fix would be to check
codebase before calling MakeAbsoluteURL
| Assignee | ||
Comment 5•24 years ago
|
||
don't call MakeAbsoluteURL for empty codeBase
| Assignee | ||
Comment 6•24 years ago
|
||
I think this affects other plugins as well. Moving to Plugins
Peter, could you review this?
Component: OJI → Plug-ins
Comment 7•24 years ago
|
||
Comment on attachment 74316 [details] [diff] [review]
suggested fix, v1
r=peterl
Attachment #74316 -
Flags: review+
| Assignee | ||
Comment 8•24 years ago
|
||
While improving patch I found few lines which totally confused me:
1017 if (NS_CONTENT_ATTR_HAS_VALUE == mContent->GetAttr(kNameSpaceID_HTML, nsHTMLAtoms::codebase, codeBase)) {
1018 nsCOMPtr<nsIURI> codeBaseURL;
1019 rv = MakeAbsoluteURL(getter_AddRefs(fullURL), codeBase, baseURL);
1020 if (NS_SUCCEEDED(rv)) {
1021 baseURL = codeBaseURL;
1022 }
We're not initializing codeBaseURL in line 1018, so what the reason
of assignment in line 1021? Shouldn't line 1019 read
rv = MakeAbsoluteURL(getter_AddRefs(codeBaseURL), codeBase, baseURL);
???
| Assignee | ||
Comment 9•24 years ago
|
||
Better fix.
The same manipulations were done in three places before.
Now baseURL handled in single place. Also same trick done
with URL construction from 'src' and 'data' attributes
(there was two identical pieces of code under different |if|s.)
Attachment #74316 -
Attachment is obsolete: true
| Assignee | ||
Comment 10•24 years ago
|
||
Peter, could you review latest patch, please?
Comment 11•24 years ago
|
||
Comment on attachment 74714 [details] [diff] [review]
fix, v2
r=peterl
Attachment #74714 -
Flags: review+
Comment 12•24 years ago
|
||
Comment on attachment 74714 [details] [diff] [review]
fix, v2
sr=beard
Attachment #74714 -
Flags: superreview+
Comment 13•24 years ago
|
||
Comment on attachment 74714 [details] [diff] [review]
fix, v2
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #74714 -
Flags: approval+
Comment 14•24 years ago
|
||
patch in trunk, marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 15•24 years ago
|
||
*** Bug 133395 has been marked as a duplicate of this bug. ***
Comment 16•24 years ago
|
||
Verified on windows 98 commercial trunk (2002-04-15-10-TRUNK)
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•