Fixing ussage of codebase attribute and Java applets loading, bug 130605 patch by adu@sparc.spb.su (Denis Antrushin) r=peterl, sr=beard, a=asa